# advent-of-code

./: LICENSE
2021/: README.md  package-lock.json  package.json
2021/src/: day01.ts  day02.ts  day03.ts  day04.ts  day05.ts  day06.ts  day07.ts  day10.ts
2022/src/: day01.php
2025/: .clang-format  .gitignore  CMakeLists.txt  README.md  run_day.fish  run_day.sh
2025/include/: solution.h
2025/input/: day01.txt
2025/src/day01/: CMakeLists.txt  day01.cpp  day01.h  day01_test.cpp
2025/src/day02/: CMakeLists.txt  day02.cpp  day02.h  day02_test.cpp
2025/src/day03/: CMakeLists.txt  day03.cpp  day03.h  day03_test.cpp
2025/src/day04/: CMakeLists.txt  day04.cpp  day04.h  day04_test.cpp
2025/src/day05/: CMakeLists.txt  day05.cpp  day05.h  day05_test.cpp
2025/src/day06/: CMakeLists.txt  day06.cpp  day06.h  day06_test.cpp
2025/src/day07/: CMakeLists.txt  day07.cpp  day07.h  day07_test.cpp
2025/src/day08/: CMakeLists.txt  day08.cpp  day08.h  day08_test.cpp
2025/src/day09/: CMakeLists.txt  day09.cpp  day09.h  day09_test.cpp
2025/src/day10/: CMakeLists.txt  day10.cpp  day10.h  day10_test.cpp
2025/src/day11/: CMakeLists.txt  day11.cpp  day11.h  day11_test.cpp
2025/src/day12/: CMakeLists.txt  day12.cpp  day12.h  day12_test.cpp
